[project]
name = "llm-bedrock-titan-image"
version = "0.1.1"

description = "An LLM plugin for supporting Amazon Titan image generators on Amazon Bedrock."
readme = "README.md"
authors = [{name = "Constantin Gonzalez"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "llm",
    "boto3 >=1.34.55",
]

[project.urls]
Homepage = "https://github.com/zalez/llm-bedrock-titan-image"

[project.entry-points.llm]
bedrock_image_titan = "llm_bedrock_titan_image"